tools/parser/Generated/tools/parser/CascodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Cascode.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Cascode.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class CascodeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		Identifier=32, IntegerLiteral=33, RealLiteral=34, StringLiteral=35, LineComment=36, 
		BlockComment=37, WS=38;
	public const int
		RULE_compilationUnit = 0, RULE_packageDecl = 1, RULE_importDecl = 2, RULE_declaration = 3, 
		RULE_traitDecl = 4, RULE_traitBody = 5, RULE_motifDecl = 6, RULE_motifBody = 7, 
		RULE_motifMember = 8, RULE_paramsBlock = 9, RULE_paramLine = 10, RULE_supplyDecl = 11, 
		RULE_groundDecl = 12, RULE_portsSquare = 13, RULE_portList = 14, RULE_portDecl = 15, 
		RULE_useBlock = 16, RULE_useStatement = 17, RULE_instanceDecl = 18, RULE_instanceParams = 19, 
		RULE_instanceParam = 20, RULE_paramValue = 21, RULE_instanceBinds = 22, 
		RULE_binding = 23, RULE_attachStmt = 24, RULE_connectStmt = 25, RULE_benchDecl = 26, 
		RULE_pinRef = 27, RULE_qualifiedName = 28, RULE_literal = 29, RULE_quantityLiteral = 30, 
		RULE_portsComputedBlock = 31, RULE_portsComputedToken = 32;
	public static readonly string[] ruleNames = {
		"compilationUnit", "packageDecl", "importDecl", "declaration", "traitDecl", 
		"traitBody", "motifDecl", "motifBody", "motifMember", "paramsBlock", "paramLine", 
		"supplyDecl", "groundDecl", "portsSquare", "portList", "portDecl", "useBlock", 
		"useStatement", "instanceDecl", "instanceParams", "instanceParam", "paramValue", 
		"instanceBinds", "binding", "attachStmt", "connectStmt", "benchDecl", 
		"pinRef", "qualifiedName", "literal", "quantityLiteral", "portsComputedBlock", 
		"portsComputedToken"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "';'", "'import'", "'.'", "'*'", "'trait'", "'extend'", 
		"','", "'{'", "'}'", "'motif'", "'implements'", "'params'", "':'", "'='", 
		"'true'", "'false'", "'supply'", "'ground'", "'ports'", "'['", "']'", 
		"'use'", "'new'", "'->'", "'attach'", "'to'", "'connect'", "'bench'", 
		"'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "Identifier", "IntegerLiteral", 
		"RealLiteral", "StringLiteral", "LineComment", "BlockComment", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cascode.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CascodeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CascodeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CascodeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CascodeParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PackageDeclContext packageDecl() {
			return GetRuleContext<PackageDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext[] importDecl() {
			return GetRuleContexts<ImportDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext importDecl(int i) {
			return GetRuleContext<ImportDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 66;
				packageDecl();
				}
			}

			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 69;
				importDecl();
				}
				}
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 536873024L) != 0)) {
				{
				{
				State = 75;
				declaration();
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 81;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public PackageDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackageDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PackageDeclContext packageDecl() {
		PackageDeclContext _localctx = new PackageDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_packageDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(T__0);
			State = 84;
			qualifiedName();
			State = 85;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext qualifiedName() {
			return GetRuleContext<QualifiedNameContext>(0);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportDeclContext importDecl() {
		ImportDeclContext _localctx = new ImportDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_importDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			Match(T__2);
			State = 88;
			qualifiedName();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 89;
				Match(T__3);
				State = 90;
				Match(T__4);
				}
			}

			State = 93;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TraitDeclContext traitDecl() {
			return GetRuleContext<TraitDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MotifDeclContext motifDecl() {
			return GetRuleContext<MotifDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BenchDeclContext benchDecl() {
			return GetRuleContext<BenchDeclContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaration);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__5:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95;
				traitDecl();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96;
				motifDecl();
				}
				break;
			case T__28:
				EnterOuterAlt(_localctx, 3);
				{
				State = 97;
				benchDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TraitDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(CascodeParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TraitBodyContext traitBody() {
			return GetRuleContext<TraitBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext[] qualifiedName() {
			return GetRuleContexts<QualifiedNameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext qualifiedName(int i) {
			return GetRuleContext<QualifiedNameContext>(i);
		}
		public TraitDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_traitDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTraitDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TraitDeclContext traitDecl() {
		TraitDeclContext _localctx = new TraitDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_traitDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(T__5);
			State = 101;
			Match(Identifier);
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 102;
				Match(T__6);
				State = 103;
				qualifiedName();
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__7) {
					{
					{
					State = 104;
					Match(T__7);
					State = 105;
					qualifiedName();
					}
					}
					State = 110;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 113;
			traitBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TraitBodyContext : ParserRuleContext {
		public TraitBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_traitBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTraitBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TraitBodyContext traitBody() {
		TraitBodyContext _localctx = new TraitBodyContext(Context, State);
		EnterRule(_localctx, 10, RULE_traitBody);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(T__8);
			State = 119;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 116;
					MatchWildcard();
					}
					} 
				}
				State = 121;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			State = 122;
			Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MotifDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(CascodeParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MotifBodyContext motifBody() {
			return GetRuleContext<MotifBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext[] qualifiedName() {
			return GetRuleContexts<QualifiedNameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedNameContext qualifiedName(int i) {
			return GetRuleContext<QualifiedNameContext>(i);
		}
		public MotifDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_motifDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMotifDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MotifDeclContext motifDecl() {
		MotifDeclContext _localctx = new MotifDeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_motifDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(T__10);
			State = 125;
			Match(Identifier);
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11) {
				{
				State = 126;
				Match(T__11);
				State = 127;
				qualifiedName();
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__7) {
					{
					{
					State = 128;
					Match(T__7);
					State = 129;
					qualifiedName();
					}
					}
					State = 134;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 137;
			motifBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MotifBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MotifMemberContext[] motifMember() {
			return GetRuleContexts<MotifMemberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MotifMemberContext motifMember(int i) {
			return GetRuleContext<MotifMemberContext>(i);
		}
		public MotifBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_motifBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMotifBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MotifBodyContext motifBody() {
		MotifBodyContext _localctx = new MotifBodyContext(Context, State);
		EnterRule(_localctx, 14, RULE_motifBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(T__8);
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 10231812L) != 0)) {
				{
				{
				State = 140;
				motifMember();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 146;
			Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MotifMemberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PortsSquareContext portsSquare() {
			return GetRuleContext<PortsSquareContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PortsComputedBlockContext portsComputedBlock() {
			return GetRuleContext<PortsComputedBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UseBlockContext useBlock() {
			return GetRuleContext<UseBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SupplyDeclContext supplyDecl() {
			return GetRuleContext<SupplyDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroundDeclContext groundDecl() {
			return GetRuleContext<GroundDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamsBlockContext paramsBlock() {
			return GetRuleContext<ParamsBlockContext>(0);
		}
		public MotifMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_motifMember; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMotifMember(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MotifMemberContext motifMember() {
		MotifMemberContext _localctx = new MotifMemberContext(Context, State);
		EnterRule(_localctx, 16, RULE_motifMember);
		try {
			State = 155;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 148;
				portsSquare();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 149;
				portsComputedBlock();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 150;
				useBlock();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 151;
				supplyDecl();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 152;
				groundDecl();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 153;
				paramsBlock();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 154;
				Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamsBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParamLineContext[] paramLine() {
			return GetRuleContexts<ParamLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamLineContext paramLine(int i) {
			return GetRuleContext<ParamLineContext>(i);
		}
		public ParamsBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paramsBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParamsBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamsBlockContext paramsBlock() {
		ParamsBlockContext _localctx = new ParamsBlockContext(Context, State);
		EnterRule(_localctx, 18, RULE_paramsBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157;
			Match(T__12);
			State = 158;
			Match(T__8);
			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 64424755204L) != 0)) {
				{
				{
				State = 159;
				paramLine();
				}
				}
				State = 164;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 165;
			Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(CascodeParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(CascodeParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IntegerLiteral() { return GetTokens(CascodeParser.IntegerLiteral); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IntegerLiteral(int i) {
			return GetToken(CascodeParser.IntegerLiteral, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RealLiteral() { return GetTokens(CascodeParser.RealLiteral); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RealLiteral(int i) {
			return GetToken(CascodeParser.RealLiteral, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] StringLiteral() { return GetTokens(CascodeParser.StringLiteral); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral(int i) {
			return GetToken(CascodeParser.StringLiteral, i);
		}
		public ParamLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paramLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParamLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamLineContext paramLine() {
		ParamLineContext _localctx = new ParamLineContext(Context, State);
		EnterRule(_localctx, 20, RULE_paramLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 64424755200L) != 0)) {
				{
				{
				State = 167;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 64424755200L) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 172;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 173;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SupplyDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(CascodeParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public SupplyDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_supplyDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICascodeVisitor<TResult> typedVisitor = visitor as ICascodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSupplyDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SupplyDeclContext supplyDecl() {
		SupplyDeclContext _localctx = new SupplyDeclContext(Context, State);
		EnterRule(_localctx, 22, RULE_supplyDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175;
			Match(T__17);
			State = 176;
			Match(Identifier);
			State = 179;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__14) {
				{
				State = 177;
				Match(T__14);
				State = 178;
				literal();
				}
			}
